<resources>
    <string name="app_name">Template</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Beranda</string>
    <string name="keuangan">Keuangan</string>
    <string name="information">Pemberitahuan</string>
    <string name="percakapan">Percakapan</string>
    <string name="profile">Profile</string>
    <string name="image_splashcreen">Image_Splashcreen</string>
    <string name="haflah">Haflah Akhirissanah</string>
    <string name="tonif">notifikasi</string>
    <string name="pondok">Pondok Pesantren Assalam Jambewangi</string>
</resources>